Moved 'set up timezone' from script to playbook.

--- a/ansiblePlaybooks/common/handlers/main.yml
+++ b/ansiblePlaybooks/common/handlers/main.yml
@@ -3,3 +3,6 @@
     name: ntp
     state: restarted
   become: true
+- name: update timezone
+  command: dpkg-reconfigure --frontend noninteractive tzdata
+  become: true
