Setting default editor moves from script to playbook. Since the "os-updates.sh" script is empty, deleting it.

--- a/ansiblePlaybooks/common/tasks/main.yml
+++ b/ansiblePlaybooks/common/tasks/main.yml
@@ -22,3 +22,10 @@
   become: true
   notify:
     - update timezone
+- name: Set EDITOR
+  lineinfile: 
+    dest: /etc/environment 
+    state: present 
+    regexp: '^EDITOR=' 
+    line: 'EDITOR=/usr/bin/vi'
+  become: true 
