Checking for python and aptitude from Ansible.
This makes the xenial workarounds script obsolete.

--- a/ansiblePlaybooks/site.yml
+++ b/ansiblePlaybooks/site.yml
@@ -1,4 +1,12 @@
----
+- hosts: all
+  gather_facts: False
+
+  tasks:
+    - name: install python2
+      raw: sudo bash -c "test -e /usr/bin/python || (apt -qqy update && apt install -qy python-minimal)"
+    - name: install aptitude
+      raw: sudo bash -c "test -e /usr/bin/aptitude || (apt -qqy update && apt install -qy aptitude)"
+
 - name: apply common configuration to all nodes
   hosts: all
 
