Fixing the name of the package installed.

--- a/ansiblePlaybooks/java/tasks/main.yml
+++ b/ansiblePlaybooks/java/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: ensure java is at the latest version
   apt: 
-    pkg: default-jdk-headless 
+    pkg: default-jdk
     state: latest
   become: true
