--- a/ansiblePlaybooks/site.yml
+++ b/ansiblePlaybooks/site.yml
@@ -21,10 +21,16 @@
     - git-client
     
 - name: install java on java client nodes
-  hosts: tag_Java_Yes
+  hosts: tag_JRE_Yes
 
   roles:
-    - java
+    - java_jre
+
+- name: install java on java client nodes
+  hosts: tag_JDK_Yes
+
+  roles:
+    - java_jdk
 
 - name: install node on node client nodes
   hosts: tag_Node_Yes
