--- a/ansiblePlaybooks/swift/tasks/main.yml
+++ b/ansiblePlaybooks/swift/tasks/main.yml
@@ -4,30 +4,35 @@
     binaryPath: /tmp/swift-binary.tar.gz
     signaturePath: /tmp/swift-signature.tar.gz.sig
     ubuntuVersion: "{{ ansible_distribution_version }}"
+    releaseName: swift-3.0.1
 
 - name: setURL
   set_fact: 
-    binaryTar: swift-3.0-RELEASE-ubuntu14.04.tar.gz
+    MajorVersion: "14"
+    MinorVersion: "04"
   when: '"14.04" in ubuntuVersion'
 
 - name: setURL
   set_fact: 
-    binaryURL: https://swift.org/builds/swift-3.0-release/ubuntu1404/swift-3.0-RELEASE/{{ binaryTar }}
-    swiftSystemHome: /swift/swift-3.0-RELEASE-ubuntu14.04
-    signatureURL: https://swift.org/builds/swift-3.0-release/ubuntu1404/swift-3.0-RELEASE/swift-3.0-RELEASE-ubuntu14.04.tar.gz.sig
-  when: '"14.04" in ubuntuVersion'
-
-- name: setURL
-  set_fact: 
-    binaryTar: swift-3.0-RELEASE-ubuntu15.10.tar.gz
+    MajorVersion: "15"
+    MinorVersion: "10"
   when: '"15.10" in ubuntuVersion'
 
 - name: setURL
   set_fact: 
-    binaryURL: https://swift.org/builds/swift-3.0-release/ubuntu1510/swift-3.0-RELEASE/{{ binaryTar }}
-    swiftSystemHome: /swift/swift-3.0-RELEASE-ubuntu15.10
-    signatureURL: https://swift.org/builds/swift-3.0-release/ubuntu1510/swift-3.0-RELEASE/swift-3.0-RELEASE-ubuntu15.10.tar.gz.sig
-  when: '"15.10" in ubuntuVersion'
+    MajorVersion: "16"
+    MinorVersion: "04"
+  when: '"16.04" in ubuntuVersion'
+
+- name: setURL
+  set_fact:
+    binaryTar: "{{ releaseName }}-RELEASE-ubuntu{{ MajorVersion }}.{{ MinorVersion }}.tar.gz"
+
+- name: setURL
+  set_fact:
+    binaryURL: "https://swift.org/builds/{{ releaseName }}-release/ubuntu{{ MajorVersion }}{{ MinorVersion }}/{{ releaseName }}-RELEASE/{{ binaryTar }}"
+    swiftSystemHome: /swift/{{ releaseName }}-RELEASE-ubuntu{{ MajorVersion }}.{{ MinorVersion }}
+    signatureURL: "https://swift.org/builds/{{ releaseName }}-release/ubuntu{{ MajorVersion }}{{ MinorVersion }}/{{ releaseName }}-RELEASE/{{ binaryTar }}.sig"
 
 - debug: var={{ ubuntuVersion }}
 - debug: msg="Binary URL is "
